# ivy-mental

./: .gitattributes  README.md
app/: .gitignore  flutter_launcher_icons.yaml  pubspec.yaml
app/android/app/: build.gradle.kts  gradle.properties
app/assets/ml/: model.onnx  model.onnx.data
app/ios/: Podfile
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  theme.dart
app/lib/core/localization/: app_translations.dart
app/lib/core/notifications/: notification_service.dart
app/lib/data/: mock_data_seeder.dart
app/lib/data/models/: session.dart
app/lib/data/notifiers/: score_reminder_notifier.dart  session_notifier.dart  settings_notifier.dart
app/lib/data/repositories/: session_repository.dart
app/lib/features/: main_navigation_screen.dart
app/lib/features/audio_recording/: audio_recording_screen.dart
app/lib/features/evaluation/: evaluation_screen.dart
app/lib/features/history/: history_screen.dart
app/lib/features/overview/: evaluation_screen.dart  longterm_screen.dart  overview_pager_screen.dart
app/lib/features/plan/: plan_screen.dart
app/lib/recording/: audio_recording_screen.dart
app/lib/shared/widgets/: ivy_visuals.dart
app/linux/flutter/: generated_plugins.cmake
app/macos/Flutter/: GeneratedPluginRegistrant.swift
ml_trainer/: .gitignore  AGENTS.md  README.md  chat.py  evaluate.py  export_onnx.py  generate_dataset.py  pyproject.toml  train.py
ml_trainer/app/: config.py  dataset.py  evaluate.py  inference.py  model.py  trainer.py
ml_trainer/data/: sample.csv  sample_eval.csv
(+19 files in other folders)
