[project]
name = "ml-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "onnx>=1.17.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.0",
    "optimum>=2.2.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
